# TargetADS

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  genres.csv  genres.json  main.py  pyproject.toml
api/: main.py
api/core/: config.py  database.py
api/endpoints/: books.py  contributors.py
api/schemas/: books.py  database.py
api/scripts/: import_genres.py  init_db.py  seed_data.py
first_task/: first_task.py  test_first_task.py
tests/: tests_second_task.py
